publicacion de prueba

--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "scripts": {
     "dev": "node --watch index.js",
     "tests": "jest --watchAll",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
