--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-SERVER = https://shaddai.vercel.app/
+SERVER = https://facturacion-shaddai-front-r7dn3xmtf-sebastianlonres-projects.vercel.app/
